--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,16 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+Sonder files for DeviantArt/
+Skins/@Backup/
+Skins/@Vault/
+Skins/ASTROWeather/
+Skins/background/
+Skins/CoreTemp/
+Skins/HWiNFO/
+Skins/LargeCleanWeather/
+Skins/ModernGadgets/
+Skins/RainformerHWi/
+Skins/testing/
+Skins/ToggleCheckBox
