--- a/.gitignore
+++ b/.gitignore
@@ -352,7 +352,7 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-Sonder files for DeviantArt/
+"Sonder files for DeviantArt/"
 Skins/@Backup/
 Skins/@Vault/
 Skins/ASTROWeather/
