--- a/Skins/Sonder/Date/Date_hori1.ini
+++ b/Skins/Sonder/Date/Date_hori1.ini
@@ -13,18 +13,18 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
 Preview=
 
-[MeasureDate]
-Measure=Time
-Format=%A | %B %d %Y
-Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday2#","Tuesday":"#Tuesday2#","Wednesday":"#Wednesday2#","Thursday":"#Thursday2#","Friday":"#Friday2#","Saturday":"#Saturday2#","Sunday":"#Sunday2#"
-
 [Variables]
 @include=#@#Styles-All\Default.inc
 
 [Styles]
 @include=#@#Styles-All\Styles.inc
 
--------------------------------------METERS--------------------------------------------
+[MeasureDate]
+Measure=Time
+Format=#DateFormat1#
+Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday2#","Tuesday":"#Tuesday2#","Wednesday":"#Wednesday2#","Thursday":"#Thursday2#","Friday":"#Friday2#","Saturday":"#Saturday2#","Sunday":"#Sunday2#"
+
+;-------------------------------------METERS--------------------------------------------
 
 [Background]
 Meter=IMAGE
