--- a/Skins/Sonder/Date/Date_vert1.ini
+++ b/Skins/Sonder/Date/Date_vert1.ini
@@ -13,18 +13,18 @@ License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
 Preview=
 
-[MeasureDate]
-Measure=Time
-Format=%A | %B %d
-Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday#","Tuesday":"#Tuesday#","Wednesday":"#Wednesday#","Thursday":"#Thursday#","Friday":"#Friday#","Saturday":"#Saturday#","Sunday":"#Sunday#"
-
 [Variables]
 @include=#@#Styles-All\Default.inc
 
 [Styles]
 @include=#@#Styles-All\Styles.inc
 
--------------------------------------METERS--------------------------------------------
+[MeasureDate]
+Measure=Time
+Format=#DateFormat2#
+Substitute="January":"#January#","February":"#February#","March":"#March#","April":"#April#","May":"#May#","June":"#June#","July":"#July#","August":"#August#","September":"#September#","October":"#October#","November":"#November#","December":"#December#","Monday":"#Monday#","Tuesday":"#Tuesday#","Wednesday":"#Wednesday#","Thursday":"#Thursday#","Friday":"#Friday#","Saturday":"#Saturday#","Sunday":"#Sunday#"
+
+;-------------------------------------METERS--------------------------------------------
 
 [Background]
 Meter=IMAGE
