--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,9 @@ Skins/ModernGadgets/
 Skins/RainformerHWi/
 Skins/testing/
 Skins/ToggleCheckBox/
+Skins/NUXHD/
+Skins/PoorMansCalendar/
+Skins/Sawny/
+Skins/bluetoothswitch/
+Skins/calendar/
+Skins/monstercat-visualizer/
