--- a/Skins/Sonder/EverydayHabitCalendar/EverydayHabitCalendar.ini
+++ b/Skins/Sonder/EverydayHabitCalendar/EverydayHabitCalendar.ini
@@ -31,6 +31,12 @@ Preview=
 @include4=#@#Calendar\Calendar-Measures.inc
 
 ;============================================= begin visual elements =======================================================
+[MeasureOnLoad1]
+Measure=Calc
+Formula=Counter
+IfCondition=MeasureOnLoad1 = 1
+IfTrueAction=[!ZPos "1" #ROOTCONFIG#\EverydayHabitCalendar]
+
 [Background]
 Meter=IMAGE
 SolidColor=#CalendarBackgroundColor#
@@ -59,7 +65,7 @@ H=32
 ImageTint=255,255,255
 MouseOverAction=[!SetOption SettingsIcon ImageTint #DayActiveColorHover#][!UpdateMeter SettingsIcon][!Redraw]
 MouseLeaveAction=[!SetOption SettingsIcon ImageTint 255,255,255][!UpdateMeter SettingsIcon][!Redraw]
-LeftMouseUpAction=[!RainmeterActivateConfig #ROOTCONFIG#\Settings Calendar-Settings.ini][!ZPos "1" #ROOTCONFIG#\Settings]
+LeftMouseUpAction=[!RainmeterActivateConfig #ROOTCONFIG#\Settings Calendar-Settings.ini][!ZPos "0" #ROOTCONFIG#\EverydayHabitCalendar][!ZPos "1" #ROOTCONFIG#\Settings]
 Hidden=1
 
 [Exit]
