--- a/Skins/Sonder/Settings/System-Advanced-Settings.ini
+++ b/Skins/Sonder/Settings/System-Advanced-Settings.ini
@@ -197,14 +197,14 @@ Group=Settings
 ; ------------------------------
 ; PROGARM DETECTION
 
-[MeasureHwinfoDetect]
-Measure=Plugin
-Plugin=HWiNFO
-HWiNFOSensorId=#HWiNFO-CPU0-Core0Temp-SensorId#
-HWiNFOSensorInstance=#HWiNFO-CPU0-Core0Temp-SensorInstance#
-HWiNFOEntryId=#HWiNFO-CPU0-Core0Temp-EntryId#
-HWiNFOLogHandler=2
-HWiNFOType=CurrentValue
+; [MeasureHwinfoDetect]
+; Measure=Plugin
+; Plugin=HWiNFO
+; HWiNFOSensorId=#HWiNFO-CPU0-Core0Temp-SensorId#
+; HWiNFOSensorInstance=#HWiNFO-CPU0-Core0Temp-SensorInstance#
+; HWiNFOEntryId=#HWiNFO-CPU0-Core0Temp-EntryId#
+; HWiNFOLogHandler=2
+; HWiNFOType=CurrentValue
 
 [MeasureCoreTempDetect]
 Measure=Plugin
@@ -1779,6 +1779,19 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "Toggle('showPageAmount
 ; ------------------------------
 ; HWiNFO CONFIGURATION
 ; ------------------------------
+[MeasureHwinfoDetect]
+Measure=Plugin
+Plugin=HWiNFO
+HWiNFOSensorId=[#HWiNFO-GPU[#gpuIndex]-Clock-SensorId]
+HWiNFOSensorInstance=[#HWiNFO-GPU[#gpuIndex]-Clock-SensorInstance]
+HWiNFOEntryId=[#HWiNFO-GPU[#gpuIndex]-Clock-EntryId]
+HWiNFOLogHandler=2
+HWiNFOType=CurrentValue
+IfCondition=(MeasureHwinfoDetect = -9000)
+IfTrueAction=[!ShowMeterGroup NoHwinfo][!Redraw]
+IfCondition2=(MeasureHwinfoDetect <> -9000)
+IfTrueAction2=[!HideMeterGroup NoHwinfo][!Redraw]
+
 [MeterHwinfoConfigLabel]
 Meter=String
 ;MeterStyle=StyleStringSettingsHWinfo | StyleStringSettingsSectionLabel
@@ -1936,4 +1949,30 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "InputText({ meterName 
 [MeterSpeedfanCpuFanConfigAdjustor]
 Meter=Image
 MeterStyle=StyleInputBoxAdjustor
+
+
+; [MeterNoHwinfoBackground]
+; Meter=Shape
+; MeterStyle=StyleBackground
+; Group=NoHwinfo
+; Hidden=1
+
+[MeterNoHwinfoWarning]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleStringCenterAlign
+FontColor=#colorError#
+X=(#bgWidth#*(5/6))
+Y=20r
+Text=HWINFO NOT DETECTED
+Group=NoHwinfo
+Hidden=1
+
+[MeterNoHwinfoInfo]
+Meter=String
+MeterStyle=StyleStringSettingsHWinfo | StyleStringParagraph
+Text=GPU Meter relies on HWiNFO to function. Please make sure you have configured HWiNFO as per the setup tutorial. Once HWiNFO is running properly, this gadget will automatically refresh.
+Group=NoHwinfo
+X=(#bgWidth#*(5/6)-110)
+W=230
+Hidden=1
 
