--- a/Skins/Sonder/System/System-Advanced.ini
+++ b/Skins/Sonder/System/System-Advanced.ini
@@ -9,7 +9,7 @@ AccurateText=1
 DynamicWindowSize=1
 
 ; Custom Context Menu
-ContextTitle=CPU Meter settings
+ContextTitle=System Meter settings
 ContextAction=[!ActivateConfig "Sonder\Settings" "System-Advanced-Settings.ini"]
 
 [Metadata]
@@ -424,11 +424,18 @@ Disabled=(#showCpuClock# = 0) || ((#extProgram# <> 2) && (#extProgram# <> 6))
 [MeasureHwinfoDetect]
 Measure=Plugin
 Plugin=HWiNFO
-HWiNFOSensorId=#HWiNFO-CPU0-Core0Temp-SensorId#
-HWiNFOSensorInstance=#HWiNFO-CPU0-Core0Temp-SensorInstance#
-HWiNFOEntryId=#HWiNFO-CPU0-Core0Temp-EntryId#
+; HWiNFOSensorId=#HWiNFO-CPU0-Core0Temp-SensorId#
+; HWiNFOSensorInstance=#HWiNFO-CPU0-Core0Temp-SensorInstance#
+; HWiNFOEntryId=#HWiNFO-CPU0-Core0Temp-EntryId#
+HWiNFOSensorId=[#HWiNFO-GPU[#gpuIndex]-Clock-SensorId]
+HWiNFOSensorInstance=[#HWiNFO-GPU[#gpuIndex]-Clock-SensorInstance]
+HWiNFOEntryId=[#HWiNFO-GPU[#gpuIndex]-Clock-EntryId]
 HWiNFOLogHandler=2
 HWiNFOType=CurrentValue
+IfCondition=(MeasureHwinfoDetect = -9000)
+IfTrueAction=[!ShowMeterGroup NoHwinfo][!SetOption MeterCpuUsageLabel FontColor 0,0,0,1][!SetOption MeterCpuUsageLabel tooltiptext ""][!UpdateMeter MeterCpuUsageLabel][!Redraw]
+IfCondition2=(MeasureHwinfoDetect <> -9000)
+IfTrueAction2=[!HideMeterGroup NoHwinfo][!SetOption MeterCpuUsageLabel FontColor #SystemcolorText#][!SetOption MeterCpuUsageLabel tooltiptext "Open Task Manager"][!UpdateMeter MeterCpuUsageLabel][!Redraw]
 
 [MeasureCoreTempDetect]
 Measure=Plugin
@@ -488,19 +495,6 @@ ScriptFile=#scriptPath#FixedPrecisionFormat.lua
 [MeasureSettingsScript]
 Measure=Script
 ScriptFile=#scriptPath#Settings.lua
-
-[MeasureHwinfoDetect]
-Measure=Plugin
-Plugin=HWiNFO
-HWiNFOSensorId=[#HWiNFO-GPU[#gpuIndex]-Clock-SensorId]
-HWiNFOSensorInstance=[#HWiNFO-GPU[#gpuIndex]-Clock-SensorInstance]
-HWiNFOEntryId=[#HWiNFO-GPU[#gpuIndex]-Clock-EntryId]
-HWiNFOType=CurrentValue
-HWiNFOLogHandler=2
-IfCondition=(MeasureHwinfoDetect = -9000)
-IfTrueAction=[!ShowMeterGroup NoHwinfo][!Redraw]
-IfCondition2=(MeasureHwinfoDetect <> -9000)
-IfTrueAction2=[!HideMeterGroup NoHwinfo][!Redraw]
 
 ; ------------------------------
 ; GENERAL
@@ -2181,11 +2175,12 @@ MeterStyle=StyleBackgroundHeight
 ; ------------------------------
 ; No HWiNFO Warning
 
-[MeterNoHwinfoBackground]
-Meter=Shape
-MeterStyle=StyleBackground
-Group=NoHwinfo
-Hidden=1
+; [MeterNoHwinfoBackground]
+; Meter=Shape
+; MeterStyle=StyleSidebarBackground
+; ;StyleBackground
+; Group=NoHwinfo
+; Hidden=1
 
 [MeterNoHwinfoWarning]
 Meter=String
@@ -2193,15 +2188,17 @@ MeterStyle=StyleString | StyleStringCenterAlign
 FontColor=#colorError#
 Y=10
 Text=HWINFO NOT DETECTED
+LeftMouseUpAction=[!ActivateConfig "Sonder\Settings" "System-Advanced-Settings.ini"]
+tooltiptext=Open Settings
 Group=NoHwinfo
 Hidden=1
 
-[MeterNoHwinfoInfo]
-Meter=String
-MeterStyle=StyleString | StyleStringParagraph
-Text=GPU Meter relies on HWiNFO to function. Please make sure you have configured HWiNFO as per the setup tutorial. Once HWiNFO is running properly, this gadget will automatically refresh.
-Group=NoHwinfo
-Hidden=1
+; [MeterNoHwinfoInfo]
+; Meter=String
+; MeterStyle=StyleString | StyleStringParagraph
+; Text=GPU Meter relies on HWiNFO to function. Please make sure you have configured HWiNFO as per the setup tutorial. Once HWiNFO is running properly, this gadget will automatically refresh.
+; Group=NoHwinfo
+; Hidden=1
 
 
 
