--- a/Skins/Sonder/Settings/System-Advanced-Settings.ini
+++ b/Skins/Sonder/Settings/System-Advanced-Settings.ini
@@ -8,7 +8,7 @@ Name=CPU Config
 Author=mpurses (raiguard mod)
 Information=Configuration for Advanced System
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
-Version=2.2
+Version=2.3
 
 [Variables]
 @includeStyleSheet=#@#Styles-System\Advanced-StyleSheet.inc
@@ -117,7 +117,8 @@ TtAction=[PlayStop "#SystemMeterConfig#"][!UpdateMeasure MeasureCpuTtCalc "#Syst
 TtSoundAction=[PlayStop "#SystemMeterConfig#"][!UpdateMeasureGroup Tt "#SystemMeterConfig#"]
 CustomCpuNameAction=[!UpdateMeasure MeasureCpuName][!UpdateMeter MeterCustomCpuNameInputBox][!Redraw][!UpdateMeasure MeasureCpuCustomDisplayName "#SystemMeterConfig#"][!UpdateMeter MeterCpuDisplayName "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 GraphAllCoresModeAction=[!Redraw "#SystemMeterConfig#"]
-
+CpuTitleAction=[!SetOption MeterCpuUsageLabel Hidden "(#showCpuTitle# = 0)" "#SystemMeterConfig#"][!SetOption MeterCpuUsageLabel Y "((#showCpuTitle# = 0) ? 0 : #rowSpacing#)R" "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!UpdateMeter MeterCpuUsageLabel "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+RamTitleAction=[!SetOption MeterGadgetRamTitle Hidden "(#showRamTitle# = 0)" "#SystemMeterConfig#"][!SetOption MeterGadgetRamTitle Y "((#showRamTitle# = 0) ? 0 : #rowSpacing#)R" "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!UpdateMeter MeterGadgetRamTitle "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 
 [MeasureSettingsScriptGPU]
 Measure=Script
@@ -145,6 +146,7 @@ ManualMaxVramAction1=[!SetOption GpuMemoryUsageValueString Text "%2%" "#SystemMe
 SetManualMaxVramAction=[!UpdateMeasureGroup Memory "#SystemMeterConfig#"][!UpdateMeterGroup GpuVram "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 SetMaxGpuTempAction=[!SetOption MeasureGpuTemperature MaxValue "#maxGpuTemp#" "#SystemMeterConfig#"][!UpdateMeasure MeasureGPuTemperature "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 DualGpuModeAction=[!Refresh "#SystemMeterConfig#"]
+GpuTitleAction=[!SetOption MeterGadgetGPUTitle Hidden "(#showGpuTitle# = 0)" "#SystemMeterConfig#"][!SetOption MeterGadgetGPUTitle Y "((#showGpuTitle# = 0) ? 0 : #rowSpacing#)R" "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!UpdateMeter MeterGadgetGPUTitle "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 
 [MeasureSettingsInputText]
 Measure=Plugin
@@ -378,19 +380,19 @@ LeftMouseUpAction=!DeactivateConfig
 Meter=Shape
 X=10
 Y=70
-Shape=Rectangle 0,0,(#bgWidth#/3-14),340 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Shape=Rectangle 0,0,(#bgWidth#/3-14),360 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [RAMSettingsContainer]
 Meter=Shape
 X=(#bgWidth#/3+8)
-Y=317
-Shape=Rectangle 0,0,(#bgWidth#/3-14),70 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Y=335
+Shape=Rectangle 0,0,(#bgWidth#/3-14),94 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [GPUSettingsContainer]
 Meter=Shape
 X=(#bgWidth#/3+8)
 Y=70
-Shape=Rectangle 0,0,(#bgWidth#/3-14),216 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Shape=Rectangle 0,0,(#bgWidth#/3-14),236 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [HWinfoSettingsContainer]
 Meter=Shape
@@ -414,11 +416,27 @@ Y=50
 ; ------------------------------
 ; GENERAL
 
+; CPU Title
+[MeterCpuTitleButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButton | StyleSettingsButton[&MeasureSettingsScript:GetAsset('check_icon', 'showCpuTitle', '1')]
+Y=25r
+
+[MeterCpuTitleButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettings | StyleSettingsButtonLabel
+Text='CPU' Title
+
+[MeterCpuTitleButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegion
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "Toggle('showCpuTitle', '1', '0', 'CpuTitleAction')"]
+
 ; CPU Name
 [MeterCpuNameButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButton | StyleSettingsButton[&MeasureSettingsScript:GetAsset('check_icon', 'showCpuName', '1')]
-Y=25r
+Y=R
 
 [MeterCpuNameButtonLabel]
 Meter=String
@@ -1358,11 +1376,29 @@ Y=50
 ; GENERAL
 
 ; GPU Name
+
+; GPU Title
+[MeterGpuTitleButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showGpuTitle', '1')]
+Y=7R
+
+[MeterGpuTitleButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
+Text='GPU' Title
+
+[MeterGpuTitleButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionGPU
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showGpuTitle', '1', '0', 'GpuTitleAction')"]
+
+
 [MeterGpuNameButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showGpuName', '1')]
 ;X=r
-Y=7R
+Y=R
 
 [MeterGpuNameButtonLabel]
 Meter=String
@@ -1728,11 +1764,27 @@ Y=20R
 Text=RAM SETTINGS
 ;Group=Settings | ProgramSwitching | Hwinfo | SpeedFan | CoreTempSpeedFan
 
+; Ram Title
+[MeterRamTitleButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScript:GetAsset('check_icon', 'showRamTitle', '1')]
+Y=25r
+
+[MeterRamTitleButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
+Text='RAM' Title
+
+[MeterRamTitleButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionGPU
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "Toggle('showRamTitle', '1', '0', 'RamTitleAction')"]
+
 ; Ram amount
 [MeterRamAmountButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScript:GetAsset('check_icon', 'showRamAmount', '1')]
-Y=25r
+;Y=25r
 [MeterRamAmountButtonLabel]
 Meter=String
 MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
@@ -1881,9 +1933,10 @@ LeftMouseUpAction=[!SetOption #CURRENTSECTION# Fill "Fill Color #colorAccent#"][
 
 [MeterSpeedfanConfigLabel]
 Meter=String
-MeterStyle=StyleStringSettingsHWinfo | StyleStringSettingsSectionLabel
+MeterStyle=StyleStringSettings | StyleStringSettingsSkinTitle
+X=(#bgWidth#*(5/6))
+Y=42r
 Text=SpeedFan Configuration
-X=[MeterHwinfoConfigTutorialIcon:X]
 
 [MeterSpeedfanConfigTutorialIcon]
 Meter=Shape
