--- a/Skins/Sonder/System/System-Advanced.ini
+++ b/Skins/Sonder/System/System-Advanced.ini
@@ -2,7 +2,8 @@
 MiddleMouseDownAction=[!Refresh]
 MouseOverAction=[!ToggleMeterGroup ConfigButton][!ToggleMeterGroup AvgCpuUsage0][!UpdateMeterGroup ConfigButton][!UpdateMeterGroup AvgCpuUsage0][!UpdateMeterGroup Background][!Redraw]
 MouseLeaveAction=[!ToggleMeterGroup ConfigButton][!ToggleMeterGroup AvgCpuUsage0][!UpdateMeterGroup ConfigButton][!UpdateMeterGroup AvgCpuUsage0][!UpdateMeterGroup Background][!Redraw]
-LeftMouseDoubleClickAction=["taskmgr.exe"]
+;LeftMouseDoubleClickAction=["taskmgr.exe"]
+LeftMouseDoubleClickAction=!ActivateConfig #CURRENTCONFIG#
 Group=Sonder | MgGlobalRefresh | MgImportRefresh | AllNoWeather
 BackgroundMode=3
 AccurateText=1
@@ -17,7 +18,7 @@ Name=CPU
 Author=mpurses (raiguard mod)
 Information=Advanced System Stats using HWINFO
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
-Version=2.2
+Version=2.3
 
 [Variables]
 @include=#@#Variables.inc
@@ -424,9 +425,9 @@ Disabled=(#showCpuClock# = 0) || ((#extProgram# <> 2) && (#extProgram# <> 6))
 [MeasureHwinfoDetect]
 Measure=Plugin
 Plugin=HWiNFO
-; HWiNFOSensorId=#HWiNFO-CPU0-Core0Temp-SensorId#
-; HWiNFOSensorInstance=#HWiNFO-CPU0-Core0Temp-SensorInstance#
-; HWiNFOEntryId=#HWiNFO-CPU0-Core0Temp-EntryId#
+HWiNFOSensorId=#HWiNFO-CPU0-Core0Temp-SensorId#
+HWiNFOSensorInstance=#HWiNFO-CPU0-Core0Temp-SensorInstance#
+HWiNFOEntryId=#HWiNFO-CPU0-Core0Temp-EntryId#
 HWiNFOSensorId=[#HWiNFO-GPU[#gpuIndex]-Clock-SensorId]
 HWiNFOSensorInstance=[#HWiNFO-GPU[#gpuIndex]-Clock-SensorInstance]
 HWiNFOEntryId=[#HWiNFO-GPU[#gpuIndex]-Clock-EntryId]
@@ -436,6 +437,15 @@ IfCondition=(MeasureHwinfoDetect = -9000)
 IfTrueAction=[!ShowMeterGroup NoHwinfo][!SetOption MeterCpuUsageLabel FontColor 0,0,0,1][!SetOption MeterCpuUsageLabel tooltiptext ""][!UpdateMeter MeterCpuUsageLabel][!Redraw]
 IfCondition2=(MeasureHwinfoDetect <> -9000)
 IfTrueAction2=[!HideMeterGroup NoHwinfo][!SetOption MeterCpuUsageLabel FontColor #SystemcolorText#][!SetOption MeterCpuUsageLabel tooltiptext "Open Task Manager"][!UpdateMeter MeterCpuUsageLabel][!Redraw]
+
+; [MeasureHwinfoDetect]
+; Measure=Plugin
+; Plugin=HWiNFO
+; HWiNFOSensorId=#HWiNFO-CPU0-Core0Temp-SensorId#
+; HWiNFOSensorInstance=#HWiNFO-CPU0-Core0Temp-SensorInstance#
+; HWiNFOEntryId=#HWiNFO-CPU0-Core0Temp-EntryId#
+; HWiNFOLogHandler=2
+; HWiNFOType=CurrentValue
 
 [MeasureCoreTempDetect]
 Measure=Plugin
@@ -767,6 +777,7 @@ ClipString=1
 W=(#contentWidth# - 50)
 LeftMouseUpAction=["taskmgr.exe"]
 tooltiptext=Open Task Manager
+Hidden=(#showCpuTitle# = 0)
 ;DynamicVariables=1
 
 ; ----- CPU Name -----
@@ -979,8 +990,9 @@ Meter=String
 MeterStyle=StyleString | StyleStringGadgetLabel
 ;X=4r
 Y=(#rowSpacing# + 2)R
-Text=RAM
+Text="RAM"
 DynamicVariables=1
+Hidden=(#showRamTitle# = 0)
 
 [MeterRamLabel]
 Meter=String
@@ -1083,8 +1095,9 @@ Meter=String
 MeterStyle=StyleString | StyleStringGadgetLabel
 ;X=4r
 Y=(#rowSpacing# + 2)R
-Text=GPU
+Text="GPU"
 DynamicVariables=1
+Hidden=(#showGpuTitle# = 0)
 
 ; ------------------------------
 ; GENERAL INFO
