--- a/Skins/Sonder/Date/4-Date_Global.ini
+++ b/Skins/Sonder/Date/4-Date_Global.ini
@@ -1,5 +1,6 @@
 [Rainmeter]
 Update=1000
+Group=AllNoWeather
 MouseScrollUpAction=[!WriteKeyValue Variables DateScale "(#DateScale#+#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh] 
 ;[!SetVariable DateScale "(#DateScale#+#ScrollMouseIncrement#) "#@#Variables.inc""]
 MouseScrollDownAction=[!WriteKeyValue Variables DateScale "(#DateScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #DateScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh]
