--- a/Skins/Sonder/Recycle/Bin_1.ini
+++ b/Skins/Sonder/Recycle/Bin_1.ini
@@ -29,6 +29,8 @@ RecycleType=COUNT
 Measure=Plugin
 Plugin=RecycleManager.dll
 RecycleType=SIZE
+; IfEqualValue=0
+; IfEqualAction=[Substitute="0":"Empty"]
 ;Drives=ALL
 
 [BinAction]
