--- a/Skins/Sonder/Settings/System-Advanced-Settings.ini
+++ b/Skins/Sonder/Settings/System-Advanced-Settings.ini
@@ -28,7 +28,7 @@ useMoboFanSensor=0
 currentGadget=#SystemMeterConfig#
 ;currentGadget=#gpuMeterConfig#
 
-extProgram=1
+extProgram=0
 coreTempSource=Hwinfo
 
 gpuMeter1Config=Sonder\System\GPU1
@@ -132,6 +132,7 @@ MeasureInputText=MeasureSettingsInputText
 ; GPU ACTIONSETS
 GpuNameAction=[!SetOptionGroup GpuName Disabled "(#showGpuName# = 0)" "#SystemMeterConfig#"][!SetOption MeterGpuName Hidden "(#showGpuName# = 0)" "#SystemMeterConfig#"][!SetOption MeterGpuName Y "((#showGpuName# = 0) ? 0 : #rowSpacing#)R" "#SystemMeterConfig#"][!UpdateMeterGroup GpuName "#SystemMeterConfig#"][!UpdateMeter MeterGpuName "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 MemoryClockAction=[!SetOptionGroup MemoryClock Disabled "(#showMemoryClock# = 0)" "#SystemMeterConfig#"][!UpdateMeasureGroup MemoryClock "#SystemMeterConfig#"][!SetOptionGroup MemoryClock Hidden "(#showMemoryClock# = 0)" "#SystemMeterConfig#"][!UpdateMeterGroup MemoryClock "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+VRAMAction=[!SetOptionGroup Memory Disabled "(#showVRAM# = 0)" "#SystemMeterConfig#"][!UpdateMeasureGroup Memory "#SystemMeterConfig#"][!SetOptionGroup GpuVram Hidden "(#showVRAM# = 0)" "#SystemMeterConfig#"][!UpdateMeterGroup GpuVram "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 FanInfoAction=[!SetOptionGroup GpuFan Hidden "(#showFanInfo# = 0)" "#SystemMeterConfig#"][!SetOption GpuFanUsageLabelString Y "((#showFanInfo# = 1) ? #rowSpacing# : -#barTextOffset#)R" "#SystemMeterConfig#"][!UpdateMeterGroup GpuFan "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 MemoryControllerAction=[!SetOption MeasureMemoryControllerLoad Disabled "(#showMemoryController# = 0)" "#SystemMeterConfig#"][!UpdateMeasure MeasureMemoryControllerLoad "#SystemMeterConfig#"][!SetOptionGroup MemoryController Hidden "(#showMemoryController# = 0)" "#SystemMeterConfig#"][!UpdateMeterGroup MemoryController "#SystemMeterConfig#"][!UpdateMeterGroup LineGraph "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 VideoClockAction=[!SetOption MeasureVideoClock Disabled "(#showVideoClock# = 0)" "#SystemMeterConfig#"][!UpdateMeasure MeasureVideoClock "#SystemMeterConfig#"][!SetOptionGroup VideoClock Hidden "(#showVideoClock# = 0)" "#SystemMeterConfig#"][!SetOption VideoClockLabelString Y "((#showVideoClock# = 1) ? #rowSpacing# : 0)R" "#SystemMeterConfig#"][!UpdateMeterGroup VideoClock "#SystemMeterConfig#"][!UpdateMeterGroup LineGraph "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
@@ -385,14 +386,14 @@ Shape=Rectangle 0,0,(#bgWidth#/3-14),360 | Fill Color 36,36,38,255 | Stroke Colo
 [RAMSettingsContainer]
 Meter=Shape
 X=(#bgWidth#/3+8)
-Y=335
+Y=355
 Shape=Rectangle 0,0,(#bgWidth#/3-14),94 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [GPUSettingsContainer]
 Meter=Shape
 X=(#bgWidth#/3+8)
 Y=70
-Shape=Rectangle 0,0,(#bgWidth#/3-14),236 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Shape=Rectangle 0,0,(#bgWidth#/3-14),256 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [HWinfoSettingsContainer]
 Meter=Shape
@@ -1356,11 +1357,6 @@ MeterStyle=StyleInputBoxAdjustor
 ; RightMouseUpAction=[!CommandMeasure MeasureSettingsScript "Set('colorCore16', '#dColorCore16#')"]
 
 
-[MeterBackgroundHeight]
-Meter=Image
-MeterStyle=StyleBackgroundHeight
-Y=20R
-
 ;===========================================================================================================================
 ;=================================================== GPU SETTINGS ==========================================================
 ;===========================================================================================================================
@@ -1439,6 +1435,23 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "InputText({ meterNa
 Meter=Image
 MeterStyle=StyleInputBoxAdjustor
 
+; Clock/Temp  --  Not connected to action yet, dont want to hide both....
+; [MeterClockButtonIcon]
+; Meter=Shape
+; MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showGPUClock', '1')]
+; Y=4R
+
+; [MeterClockButtonLabel]
+; Meter=String
+; MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
+; Text=Clock/Temp
+
+; [MeterClockButtonMouseRegion]
+; Meter=Image
+; MeterStyle=StyleSettingsButtonMouseRegionGPU
+; LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showGPUClock', '1', '0', 'GPUClockAction')"]
+
+
 ; Memory Clock
 [MeterMemoryClockButtonIcon]
 Meter=Shape
@@ -1455,20 +1468,61 @@ Meter=Image
 MeterStyle=StyleSettingsButtonMouseRegionGPU
 LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showMemoryClock', '1', '0', 'MemoryClockAction')"]
 
-; Fan Information
-[MeterFanInfoButtonIcon]
+; VRAM
+[MeterVRAMButtonIcon]
 Meter=Shape
-MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showFanInfo', '1')]
+MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showVRAM', '1')]
 
-[MeterFanInfoButtonLabel]
+[MeterVRAMButtonLabel]
 Meter=String
 MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
-Text=Fan Information
+Text=VRAM
 
-[MeterFanInfoButtonMouseRegion]
+[MeterVRAMButtonMouseRegion]
 Meter=Image
 MeterStyle=StyleSettingsButtonMouseRegionGPU
-LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showFanInfo', '1', '0', 'FanInfoAction')"]
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showVRAM', '1', '0', 'VRAMAction')"]
+
+; ------------------------------
+; MAX VRAM OVERRIDE
+
+[MeterManualMaxVramButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'useManualMaxVram', '1')]
+Y=5R
+
+[MeterManualMaxVramButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
+Text=Override Maximum VRAM
+
+[MeterManualMaxVramButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionGPU
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('useManualMaxVram', '1', '0', 'ManualMaxVramAction', true)"]
+
+[MeterManualMaxVramHelpIcon]
+Meter=Shape
+MeterStyle=StyleShapeHelpIcon
+ToolTipTitle=Manual Max VRAM Override
+ToolTipText=In most cases, HWiNFO cannot find a total memory allocated sensor for AMD/ATI graphics cards. In this case, enable this toggle and enter your GPU's total VRAM in the box below, in megabytes.
+
+[MeterManualMaxVramBackground]
+Meter=Shape
+MeterStyle=StyleInputBoxBackgroundGPU
+X=[MeterManualMaxVramButtonLabel:X]
+W=54
+
+[MeterManualMaxVramInputBox]
+Meter=String
+MeterStyle=StyleStringSettingsGPU | StyleInputBox
+Text=#maxVram#
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "InputText({ meterName = '#CURRENTSECTION#', padding = { 0,0,0,1 } }, 'maxVram', 'SetManualMaxVramAction')"]
+
+[MeterManualMaxVramInputBoxSuffix]
+Meter=String
+MeterStyle=StyleStringSettingsGPU | StyleInputBoxSuffix
+Text=MB
 
 ; Memory Controller
 [MeterMemoryControllerButtonIcon]
@@ -1499,6 +1553,21 @@ Text=Video Clock
 Meter=Image
 MeterStyle=StyleSettingsButtonMouseRegionGPU
 LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showVideoClock', '1', '0', 'VideoClockAction')"]
+
+; Fan Information
+[MeterFanInfoButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showFanInfo', '1')]
+
+[MeterFanInfoButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
+Text=Fan Information
+
+[MeterFanInfoButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionGPU
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showFanInfo', '1', '0', 'FanInfoAction')"]
 
 ; Core Voltage
 [MeterCoreVoltageButtonIcon]
@@ -1551,46 +1620,7 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showCoreVol
 
 
 
-; ------------------------------
-; MAX VRAM OVERRIDE
 
-[MeterManualMaxVramButtonIcon]
-Meter=Shape
-MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'useManualMaxVram', '1')]
-Y=5R
-
-[MeterManualMaxVramButtonLabel]
-Meter=String
-MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
-Text=Override Maximum VRAM
-
-[MeterManualMaxVramButtonMouseRegion]
-Meter=Image
-MeterStyle=StyleSettingsButtonMouseRegionGPU
-LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('useManualMaxVram', '1', '0', 'ManualMaxVramAction', true)"]
-
-[MeterManualMaxVramHelpIcon]
-Meter=Shape
-MeterStyle=StyleShapeHelpIcon
-ToolTipTitle=Manual Max VRAM Override
-ToolTipText=In most cases, HWiNFO cannot find a total memory allocated sensor for AMD/ATI graphics cards. In this case, enable this toggle and enter your GPU's total VRAM in the box below, in megabytes.
-
-[MeterManualMaxVramBackground]
-Meter=Shape
-MeterStyle=StyleInputBoxBackgroundGPU
-X=[MeterManualMaxVramButtonLabel:X]
-W=54
-
-[MeterManualMaxVramInputBox]
-Meter=String
-MeterStyle=StyleStringSettingsGPU | StyleInputBox
-Text=#maxVram#
-LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "InputText({ meterName = '#CURRENTSECTION#', padding = { 0,0,0,1 } }, 'maxVram', 'SetManualMaxVramAction')"]
-
-[MeterManualMaxVramInputBoxSuffix]
-Meter=String
-MeterStyle=StyleStringSettingsGPU | StyleInputBoxSuffix
-Text=MB
 
 ; ; ------------------------------
 ; ; MAX GPU TEMPERATURE
@@ -1826,7 +1856,10 @@ Meter=Image
 MeterStyle=StyleSettingsButtonMouseRegionGPU
 LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "Toggle('showPageAmount', '1', '0', 'PageAmountAction')"]
 
-
+[MeterBackgroundHeight]
+Meter=Image
+MeterStyle=StyleBackgroundHeight
+Y=20R
 
 ; ------------------------------
 ; HWiNFO CONFIGURATION
