--- a/Skins/Sonder/System/System-Advanced.ini
+++ b/Skins/Sonder/System/System-Advanced.ini
@@ -840,6 +840,10 @@ BarColor=#colorAvgCpu#
 Group=CpuAvg
 Hidden=(#showAvgCpuUsage# = 0)
 
+; ----- CPU Core Information -----
+
+@includeCoreMeters=Includes\CoreMeters\CoreMeters#includeNum#.inc
+
 ; ----- CPU Temperature -----
 
 [MeterCpuTempLabel]
@@ -917,9 +921,7 @@ BarColor=#colorCpuFan#
 Group=CpuFan | AltCpuFanPercent
 Hidden=(#showCpuFan# < 2) || ((#extProgram# <> 1) && (#extProgram# <> 4) && (#extProgram# <> 6))
 
-; ----- CPU Core Information -----
 
-@includeCoreMeters=Includes\CoreMeters\CoreMeters#includeNum#.inc
 
 ; ----- Top Process -----
 
@@ -1112,19 +1114,6 @@ ClipString=1
 Text=%1
 Hidden=(#showGpuName# = 0)
 
-[MeterGpuClock]
-Meter=String
-MeterStyle=StyleString
-MeasureName=MeasureGpuClockSpeed
-Y=(#rowSpacing# + 1)R
-Text=Clock: %1 MHz
-
-[MeterGpuTemp]
-Meter=String
-MeterStyle=StyleString | StyleStringRightAlign
-MeasureName=MeasureGpuTemperature
-Text=%1#deg##tempUnits#
-
 [MeterGpuCoreUsageLabel]
 Meter=String
 MeterStyle=StyleString
@@ -1146,9 +1135,25 @@ BarColor=#colorCoreUsage#
 DynamicVariables=1
 Group=GpuUsage
 
+;Clock
+[MeterGpuClock]
+Meter=String
+MeterStyle=StyleString
+MeasureName=MeasureGpuClockSpeed
+Y=(#rowSpacing# + 1)R
+Text=Clock: %1 MHz
+
+[MeterGpuTemp]
+Meter=String
+MeterStyle=StyleString | StyleStringRightAlign
+MeasureName=MeasureGpuTemperature
+Text=%1#deg##tempUnits#
+
+
+
 ; ------------------------------
 ; MEMORY
-
+;Memory Clock
 [MeterGpuMemoryClockLabel]
 Meter=String
 MeterStyle=StyleString
@@ -1167,6 +1172,7 @@ Text=%1 MHz
 Group=MemoryClock
 Hidden=(#showMemoryClock# = 0)
 
+;VRAM
 [MeterGpuMemoryUsageLabel]
 Meter=String
 MeterStyle=StyleString
@@ -1196,6 +1202,53 @@ MeasureName=MeasureVramUsage
 BarColor=#colorMemoryUsage#
 DynamicVariables=1
 Group=GpuVram
+
+; ------------------------------
+; MISC
+
+;Memory Controller
+[MeterGpuMemoryControllerLabel]
+Meter=String
+MeterStyle=StyleString
+Y=((#showMemoryController# = 1) ? #rowSpacing# : -#barTextOffset#)R
+Text=Memory Controller:
+Group=MemoryController
+Hidden=(#showMemoryController# = 0)
+Group=MemoryController
+
+[MeterGpuMemoryController]
+Meter=String
+MeterStyle=StyleString | StyleStringRightAlign
+MeasureName=MeasureMemoryControllerLoad
+Text=%1%
+Group=MemoryController
+Hidden=(#showMemoryController# = 0)
+
+[MeterGpuMemoryControllerBar]
+Meter=Bar
+MeterStyle=StyleBar
+MeasureName=MeasureMemoryControllerLoad
+BarColor=#colorMemoryController#
+DynamicVariables=1
+Group=MemoryController
+Hidden=(#showMemoryController# = 0)
+
+;Video Clock
+[MeterGpuVideoClockLabel]
+Meter=String
+MeterStyle=StyleString
+Y=((#showVideoClock# = 1) ? #rowSpacing# : 0)R
+Text=Video Clock:
+Group=VideoClock
+Hidden=(#showVideoClock# = 0)
+
+[MeterGpuVideoClock]
+Meter=String
+MeterStyle=StyleString | StyleStringRightAlign
+MeasureName=MeasureVideoClock
+Text=%1 MHz
+Group=VideoClock
+Hidden=(#showVideoClock# = 0)
 
 ; ------------------------------
 ; FAN
@@ -1235,48 +1288,6 @@ Hidden=(#showFanInfo# = 0)
 
 ; ------------------------------
 ; MISC
-
-[MeterGpuMemoryControllerLabel]
-Meter=String
-MeterStyle=StyleString
-Y=((#showMemoryController# = 1) ? #rowSpacing# : -#barTextOffset#)R
-Text=Memory Controller:
-Group=MemoryController
-Hidden=(#showMemoryController# = 0)
-Group=MemoryController
-
-[MeterGpuMemoryController]
-Meter=String
-MeterStyle=StyleString | StyleStringRightAlign
-MeasureName=MeasureMemoryControllerLoad
-Text=%1%
-Group=MemoryController
-Hidden=(#showMemoryController# = 0)
-
-[MeterGpuMemoryControllerBar]
-Meter=Bar
-MeterStyle=StyleBar
-MeasureName=MeasureMemoryControllerLoad
-BarColor=#colorMemoryController#
-DynamicVariables=1
-Group=MemoryController
-Hidden=(#showMemoryController# = 0)
-
-[MeterGpuVideoClockLabel]
-Meter=String
-MeterStyle=StyleString
-Y=((#showVideoClock# = 1) ? #rowSpacing# : 0)R
-Text=Video Clock:
-Group=VideoClock
-Hidden=(#showVideoClock# = 0)
-
-[MeterGpuVideoClock]
-Meter=String
-MeterStyle=StyleString | StyleStringRightAlign
-MeasureName=MeasureVideoClock
-Text=%1 MHz
-Group=VideoClock
-Hidden=(#showVideoClock# = 0)
 
 [MeterGpuCoreVoltageLabel]
 Meter=String
